[package]
name = "sqlite3-native"
version = "0.1.0"
edition = "2018"
description = "Rust native libsqlite3"
authors = ["Захаров Константин Иванович <zaharov@prosoftsystems.ru>"]
license = "MIT"
keywords = [ "db", "sql", "sqlite", "sqlite3", "libsqlite3" ]

[dependencies]
libc = "0.2"
num-traits = "0.2"
c2rust-bitfields = "0.3.0"
f128 = "0.2.6"
